--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Sajilo</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading</string>
-    <string name="connection_msg">No Network Connection!!!</string>
+    <string name="connection_msg" tools:ignore="ExtraTranslation">No Network Connection!!!</string>
     <string name="remember_me">Remember Me</string>
     <string name="drawer_open">Drawer Open</string>
     <string name="drawer_close">Drawer Close</string>
     <string name="no_item_found">No Item Found</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_user_profile">Profile</string>
+    <string name="menu_servies">Services</string>
+    <string name="menu_log_out">Logout</string>
+    <string name="tag_line">Welcome Sajilo</string>
+    <string name="back_key">Please click BACK again to exit</string>
 </resources>
