--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="menu_log_out">Logout</string>
     <string name="tag_line">Welcome Sajilo</string>
     <string name="back_key">Please click back again to exit</string>
+    <string name="example_string">Line 1\Line2\Line n</string>
 </resources>
